# apertium-selector

./: .gitignore  Makefile.am  README  apertium-selector.pc.in  configure.ac
src/: Makefile.am  apertium_compile_selector.cc  apertium_selector.cc  apertium_train_embeddings.cc  apertium_train_selector.cc  embedding_trainer.cc  embedding_trainer.h  feature_set.cc  feature_set.h  file_header.h  lu.cc  lu.h  pattern_matcher.cc  pattern_matcher.h  selector.cc  selector.h  train.cc  train.h
